--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -66,6 +66,9 @@
     <Compile Include="Assets\Scripts\AreaExit.cs" />
     <Compile Include="Assets\Scripts\PlayerController.cs" />
     <Compile Include="Assets\Scripts\PlayerStats.cs" />
+    <Compile Include="Assets\Scripts\Quest.cs" />
+    <Compile Include="Assets\Scripts\QuestHolder.cs" />
+    <Compile Include="Assets\Scripts\QuestTrigger.cs" />
     <Reference Include="Unity.Timeline.Editor">
       <HintPath>C:/Users/Owner/Documents/FantasyCSE441/FantasyCSE441/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
     </Reference>
